# tree-sitter-mdlink

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mdlink.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mdlink/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMdlink/: mdlink.h
bindings/swift/TreeSitterMdlinkTests/: TreeSitterMdlinkTests.swift
src/: grammar.json  node-types.json  parser.c
